--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,9 @@ label {
     border-radius: 4px;
     margin-bottom: 10px;
 }
+.input:focus {
+    border: 1px solid green;
+}
 .container {
     padding: 20px;
     /*SIEMPRE DEBE EXISTIR UN CONTAINER*/
@@ -50,11 +53,36 @@ label {
     font-size: 18px;
     border-style: solid;
     font-weight: bolder;
+    margin: auto;
 }
 .btn_search_reservation_responsive:hover{
     cursor: pointer;
     background-color:rgba(255, 92, 97, 0.90);
 }
+/************CALENDAR**********/
+.calendar_container {
+    width: 360px;
+    margin: 1.6rem auto;
+    max-width: 42rem;
+    text-align: center;
+    position: relative;
+    top: -180px;
+    display: none;
+}
+
+.demo-picked {
+    font-size: 10px;
+    text-align: center;
+}
+
+.demo-picked span {
+    font-weight: bold;
+}
+
+.vcal-week > span{
+    font-size: 10px !important;
+}
+/************END CALENDAR**********/
 
 
 @media screen and (max-width: 480px) {
@@ -66,10 +94,10 @@ label {
         margin-left: 20px;
     }
     .input {
-        width: 90%;
+        width: 92%;
     }
     .input_items {
-        width: 80%;
+        width: 82%;
     }
 }
 
@@ -82,10 +110,10 @@ label {
         margin-left: 20px;
     }
     .input {
-        width: 95%;
+        width: 93.5%;
     }
     .input_items {
-        width: 90%;
+        width: 87%;
     }
 }
 
