--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ body {
 }
 .header {
     display: grid;
-    background-image: url(indice.png);
+    background-image: url(image.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
@@ -59,6 +59,10 @@ label {
     cursor: pointer;
     background-color:rgba(255, 92, 97, 0.90);
 }
+.subtitle_responsive{
+    text-align: center;
+    color: rgb(72, 72, 72);
+}
 /************CALENDAR**********/
 .calendar_container {
     width: 360px;
@@ -85,14 +89,35 @@ label {
 /************END CALENDAR**********/
 
 
+.categories{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.item_categories{
+    padding: 20px;
+}
+.item_categories > img{
+    width: 300px;
+}
+.title_responsive {
+    color: white;
+    box-shadow: 2px;
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+}
+.title_desktop {
+    color: white;
+    box-shadow: 2px;
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    display: none;
+}
+
+
 @media screen and (max-width: 480px) {
-    .title_responsive {
-        color: white;
-        box-shadow: 2px;
-        position: absolute;
-        bottom: 0;
-        margin-left: 20px;
-    }
     .input {
         width: 92%;
     }
@@ -102,13 +127,6 @@ label {
 }
 
 @media screen and (min-width: 480px) {
-    .title_responsive {
-        color: white;
-        box-shadow: 2px;
-        position: absolute;
-        bottom: 0;
-        margin-left: 20px;
-    }
     .input {
         width: 93.5%;
     }
@@ -123,6 +141,9 @@ label {
     }
     .form_reservation_responsive {
         display: none;
+    }
+    .title_desktop{
+        display: block;
     }
 }
 
