--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
 }
 .header {
     display: grid;
